force-app/main/default/objects/Opportunity/fields/Aplicar_Descuento_en_PF__c.field-meta.xml
<CustomField>
    <fullName>Aplicar_Descuento_en_PF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Descuento aplicado al Pago Inicial aplicando promoción en el producto contratado</description>
    <inlineHelpText>Descuento aplicado al Pago Inicial por promoción en el producto contratado, al haber contratado otro producto desde la misma Hipoteca.</inlineHelpText>
    <label>Aplicar Descuento en PI</label>
    <type>Checkbox</type>
</CustomField>