force-app/main/default/objects/Opportunity/fields/Aprobado__c.field-meta.xml
<CustomField>
    <fullName>Aprobado__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Casilla que indica que la aprobación ha sido satisfactoria</description>
    <label>Aprobado</label>
    <type>Checkbox</type>
</CustomField>