force-app/main/default/objects/Opportunity/fields/AsuncionCostas__c.field-meta.xml
<CustomField>
    <fullName>AsuncionCostas__c</fullName>
    <description>Hoja de encargo con/sin asunción de costas</description>
    <inlineHelpText>Hoja de encargo con/sin asunción de costas</inlineHelpText>
    <label>Asunción de costas</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sí</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>