force-app/main/default/objects/Opportunity/fields/AutoNumNumExpediente__c.field-meta.xml
<CustomField>
    <fullName>AutoNumNumExpediente__c</fullName>
    <description>Campo autonumérico que rellenará el campo id de NumeroExpediente__c cuando este esté vacío</description>
    <displayFormat>{YY}{MM}{0000000}</displayFormat>
    <label>Auto numérico Número Expediente</label>
    <type>AutoNumber</type>
</CustomField>