force-app/main/default/objects/Opportunity/fields/BloqueoAprobacion__c.field-meta.xml
<CustomField>
    <fullName>BloqueoAprobacion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Casilla que identifica si el registro no puede modificar ningún campo al estar en proceso de aprobación</description>
    <label>Bloqueado por aprobación</label>
    <type>Checkbox</type>
</CustomField>