force-app/main/default/objects/Opportunity/fields/ClientName__c.field-meta.xml
<CustomField>
    <fullName>ClientName__c</fullName>
    <label>ClientName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>