force-app/main/default/objects/Opportunity/fields/CreadoComunidad__c.field-meta.xml
<CustomField>
    <fullName>CreadoComunidad__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check que indica si la oportunidad ha sido creada desde la oportunidad. Con este check salvamos reglas de validación como los documentos aportados para crear expediente</description>
    <label>Creado comunidad</label>
    <type>Checkbox</type>
</CustomField>