force-app/main/default/objects/Opportunity/fields/DocumentosCompletado__c.field-meta.xml
<CustomField>
    <fullName>DocumentosCompletado__c</fullName>
    <description>Documentos que se deben aportar en el primer estado</description>
    <label>Documentos para completado básico</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DocumentosRequeridos</valueSetName>
    </valueSet>
</CustomField>