force-app/main/default/objects/Opportunity/fields/DocumentosCompletadoAportado__c.field-meta.xml
<CustomField>
    <fullName>DocumentosCompletadoAportado__c</fullName>
    <description>Documentación aportada para el estado inicial</description>
    <label>Documentos completado básico aportado</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DocumentosRequeridos</valueSetName>
    </valueSet>
</CustomField>