force-app/main/default/objects/Opportunity/fields/DocumentosContratacion__c.field-meta.xml
<CustomField>
    <fullName>DocumentosContratacion__c</fullName>
    <description>Documentación necesaria para pasar a producción</description>
    <label>Documentos para contratación</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DocumentosRequeridos</valueSetName>
    </valueSet>
</CustomField>