force-app/main/default/objects/Opportunity/fields/DocumentosContratacionAportado__c.field-meta.xml
<CustomField>
    <fullName>DocumentosContratacionAportado__c</fullName>
    <description>Documentos aportados necesarios para pasar a producción</description>
    <label>Documentos para contratación aportados</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>DocumentosRequeridos</valueSetName>
    </valueSet>
</CustomField>