force-app/main/default/objects/Opportunity/fields/EnvioAprobacion__c.field-meta.xml
<CustomField>
    <fullName>EnvioAprobacion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Casilla que indica si el registro ha sido enviado al proceso de aprobación</description>
    <label>Registro enviado para aprobación</label>
    <type>Checkbox</type>
</CustomField>