force-app/main/default/objects/Opportunity/fields/ExpedienteOwner__c.field-meta.xml
<CustomField>
    <fullName>ExpedienteOwner__c</fullName>
    <label>ExpedienteOwner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>