force-app/main/default/objects/Opportunity/fields/HAbogadoLiqRegimen__c.field-meta.xml
<CustomField>
    <fullName>HAbogadoLiqRegimen__c</fullName>
    <label>Honorarios abogado Liquidación régimen</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>