force-app/main/default/objects/Opportunity/fields/HAbogadoMedProvisional__c.field-meta.xml
<CustomField>
    <fullName>HAbogadoMedProvisional__c</fullName>
    <description>Honorarios Perito Plusvalía, variable a rellenar por el asesor para indicar el importe de los honorarios el perito.</description>
    <inlineHelpText>Importe de los honorarios del Perito para la Hoja de Encargo de Plusvalía.</inlineHelpText>
    <label>Honorarios Perito Plusvalía</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>