force-app/main/default/objects/Opportunity/fields/HAbogadoUnico__c.field-meta.xml
<CustomField>
    <fullName>HAbogadoUnico__c</fullName>
    <label>Honorarios abogado único (testamento)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>