force-app/main/default/objects/Opportunity/fields/HCondenaCostas__c.field-meta.xml
<CustomField>
    <fullName>HCondenaCostas__c</fullName>
    <label>Honorarios con condena a costas (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>