force-app/main/default/objects/Opportunity/fields/HojaEncargo__c.field-meta.xml
<CustomField>
    <fullName>HojaEncargo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contiene la relación con la hoja de encargo correspondiente. Completado en el momento de la selección de la tipología de esta. De este objeto se trasladaran valores a la oportunidad.</description>
    <label>Hoja de Encargo</label>
    <referenceTo>HojaEncargo__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>