force-app/main/default/objects/Opportunity/fields/HojaEncargoPersonalizada__c.field-meta.xml
<CustomField>
    <fullName>HojaEncargoPersonalizada__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Si la oportunidad cuenta con una hoja de encargo personalizada</description>
    <label>Hoja de Encargo Personalizada</label>
    <type>Checkbox</type>
</CustomField>