force-app/main/default/objects/Opportunity/fields/IdClienteMinerva__c.field-meta.xml
<CustomField>
    <fullName>IdClienteMinerva__c</fullName>
    <description>Se informa en la oportunidad el id del cliente para enviarselo a minerva al cargar documentos</description>
    <formula>Account.IdClienteMinerva__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Id Cliente Minerva</label>
    <type>Text</type>
</CustomField>