force-app/main/default/objects/Opportunity/fields/IdProducto__c.field-meta.xml
<CustomField>
    <fullName>IdProducto__c</fullName>
    <description>Id del producto en el que está  interesado para cuando se introduce un candidato a través de un formulario Web. Se guarda esta información en la oportunidad para en el trigger posteriormente crear el producto de la oportunidad</description>
    <label>Id Producto</label>
    <length>18</length>
    <type>Text</type>
</CustomField>