force-app/main/default/objects/Opportunity/fields/ImporteEstudioAnalisis__c.field-meta.xml
<CustomField>
    <fullName>ImporteEstudioAnalisis__c</fullName>
    <label>Importe de estudio y análisis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>