force-app/main/default/objects/Opportunity/fields/Llamada_Alerta_Acuerdo__c.field-meta.xml
<CustomField>
    <fullName>Llamada_Alerta_Acuerdo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Registrar la interacción con el cliente informando sobre acuerdo en el producto IRPH</description>
    <inlineHelpText>Registrar la interacción con el cliente informando sobre acuerdo en el producto IRPH</inlineHelpText>
    <label>Llamada Alerta Acuerdo</label>
    <type>Checkbox</type>
</CustomField>