force-app/main/default/objects/Opportunity/fields/LossReason__c.field-meta.xml
<CustomField>
    <fullName>LossReason__c</fullName>
    <description>Motivo de la pérdida de la oportunidad</description>
    <label>Motivo pérdida</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Cártel Coches</fullName>
            </value>
            <value>
                <fullName>Cártel Coches Requerimiento</fullName>
            </value>
            <value>
                <fullName>Clausula Suelo</fullName>
            </value>
            <value>
                <fullName>Divorcio</fullName>
            </value>
            <value>
                <fullName>Ficheros Acceso</fullName>
            </value>
            <value>
                <fullName>Ficheros Combinado</fullName>
            </value>
            <value>
                <fullName>Ficheros Reclamación</fullName>
            </value>
            <value>
                <fullName>Gastos Hipoteca</fullName>
            </value>
            <value>
                <fullName>Herencias</fullName>
            </value>
            <value>
                <fullName>IRPH</fullName>
            </value>
            <value>
                <fullName>Monitorio</fullName>
            </value>
            <value>
                <fullName>Multidivisa</fullName>
            </value>
            <value>
                <fullName>Oposición a Monitorio</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Plusvalía</fullName>
            </value>
            <value>
                <fullName>Préstamo Usurero</fullName>
            </value>
            <value>
                <fullName>Reclamación Cantidad RV</fullName>
            </value>
            <value>
                <fullName>Reclamación de Cantidad</fullName>
            </value>
            <value>
                <fullName>RV Diligencias</fullName>
            </value>
            <value>
                <fullName>RV Estándar</fullName>
            </value>
            <value>
                <fullName>RV Informe</fullName>
            </value>
            <value>
                <fullName>Sucesiones</fullName>
            </value>
            <value>
                <fullName>Triodos Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>