force-app/main/default/objects/Opportunity/fields/Motivo_Perdida_Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Perdida_Descripcion__c</fullName>
    <label>Motivo Pérdida Descripción</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Confianza en el proceso</fullName>
            </value>
            <value>
                <fullName>Entidad extranjera</fullName>
                <isActive>false</isActive>
                <label>Entidad extranjera</label>
            </value>
            <value>
                <fullName>Escasa cuantía</fullName>
            </value>
            <value>
                <fullName>Honorarios Finales elevados</fullName>
            </value>
            <value>
                <fullName>Honorarios totales</fullName>
                <isActive>false</isActive>
                <label>Honorarios totales</label>
            </value>
            <value>
                <fullName>Mala opinión del despacho</fullName>
            </value>
            <value>
                <fullName>No comparece banco</fullName>
                <isActive>false</isActive>
                <label>No comparece banco</label>
            </value>
            <value>
                <fullName>No consumidor</fullName>
                <isActive>false</isActive>
                <label>No consumidor</label>
            </value>
            <value>
                <fullName>No hay oficina presencial</fullName>
                <isActive>false</isActive>
                <label>No hay oficina presencial</label>
            </value>
            <value>
                <fullName>No interesa</fullName>
            </value>
            <value>
                <fullName>No localizado</fullName>
            </value>
            <value>
                <fullName>No puede pagar</fullName>
                <isActive>false</isActive>
                <label>No puede pagar</label>
            </value>
            <value>
                <fullName>No viable ASESOR</fullName>
            </value>
            <value>
                <fullName>No viable SSJJ</fullName>
            </value>
            <value>
                <fullName>Operaciones lucrativas</fullName>
                <isActive>false</isActive>
                <label>Operaciones lucrativas</label>
            </value>
            <value>
                <fullName>Oportunidad duplicada/errónea</fullName>
            </value>
            <value>
                <fullName>Oportunidad inexistente</fullName>
                <isActive>false</isActive>
                <label>Oportunidad inexistente</label>
            </value>
            <value>
                <fullName>Otro despacho</fullName>
            </value>
            <value>
                <fullName>Otros (Rellenar Nota)</fullName>
                <isActive>false</isActive>
                <label>Otros (Rellenar Nota)</label>
            </value>
            <value>
                <fullName>Pago inicial elevado</fullName>
            </value>
            <value>
                <fullName>Redactado cláusula</fullName>
                <isActive>false</isActive>
                <label>Redactado cláusula</label>
            </value>
            <value>
                <fullName>Reparto de gastos</fullName>
                <isActive>false</isActive>
                <label>Reparto de gastos</label>
            </value>
            <value>
                <fullName>Riesgo Costas Contrarias</fullName>
            </value>
            <value>
                <fullName>Sin documentación</fullName>
            </value>
            <value>
                <fullName>TAE</fullName>
                <isActive>false</isActive>
                <label>TAE</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>