force-app/main/default/objects/Opportunity/fields/Motivo_Perdida_Notas__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Perdida_Notas__c</fullName>
    <description>Explicación ampliada sobre el motivo de pérdida</description>
    <inlineHelpText>Explicación ampliada sobre el motivo de pérdida, breve descripción.</inlineHelpText>
    <label>Motivo Pérdida Notas</label>
    <length>255</length>
    <type>Text</type>
</CustomField>