force-app/main/default/objects/Opportunity/fields/Motivo_respuesta_viabilidad__c.field-meta.xml
<CustomField>
    <fullName>Motivo_respuesta_viabilidad__c</fullName>
    <description>Motivo respuesta viabilidad, introducido por SSJJ aportando información adicional en la gestión de las peticiones dentro de las oportunidades</description>
    <label>Motivo respuesta viabilidad</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aprobado: Viable</fullName>
            </value>
            <value>
                <fullName>Aprobado: Viable con riesgo</fullName>
            </value>
            <value>
                <fullName>Aprobado: Viable con falta de documentación</fullName>
            </value>
            <value>
                <fullName>Rechazado: No viable criterios AA</fullName>
            </value>
            <value>
                <fullName>Rechazado: Falta de documentación/ información</fullName>
            </value>
            <value>
                <fullName>Rechazado: No viable jurídicamente</fullName>
            </value>
            <value>
                <fullName>Rechazado: No consumidor</fullName>
            </value>
            <value>
                <fullName>Rechazado: No prestamos este servicio</fullName>
            </value>
            <value>
                <fullName>Rechazado: Otros</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>