force-app/main/default/objects/Opportunity/fields/NumeroExpediente__c.field-meta.xml
<CustomField>
    <fullName>NumeroExpediente__c</fullName>
    <description>Número de expediente único que se usa para enviar a Redsys como identificador del pago que se va a realizar</description>
    <externalId>true</externalId>
    <label>Número Expediente</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>