force-app/main/default/objects/Opportunity/fields/NumeroExpedienteMinerva__c.field-meta.xml
<CustomField>
    <fullName>NumeroExpedienteMinerva__c</fullName>
    <label>NumeroExpedienteMinerva</label>
    <length>255</length>
    <type>Text</type>
</CustomField>