force-app/main/default/objects/Opportunity/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Oficina de Contratación</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Seleccionàr una Cuenta de tipo Oficina y Activa</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Oficina</value>
        </filterItems>
        <filterItems>
            <field>Account.Activa__c</field>
            <operation>notEqual</operation>
            <value>False</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Oficina)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>