force-app/main/default/objects/Opportunity/fields/OfficeCity__c.field-meta.xml
<CustomField>
    <fullName>OfficeCity__c</fullName>
    <label>OfficeCity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>