force-app/main/default/objects/Opportunity/fields/OfficeName__c.field-meta.xml
<CustomField>
    <fullName>OfficeName__c</fullName>
    <label>OfficeName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>