force-app/main/default/objects/Opportunity/fields/OficinaCita__c.field-meta.xml
<CustomField>
    <fullName>OficinaCita__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Oficina del asesor que realiza la cita</description>
    <label>Oficina de Cita</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>