force-app/main/default/objects/Opportunity/fields/PHAcuerdoJud__c.field-meta.xml
<CustomField>
    <fullName>PHAcuerdoJud__c</fullName>
    <description>Honorarios en caso de acuerdo judicial(%)</description>
    <label>Honorarios en caso de acuerdo judicial %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>