force-app/main/default/objects/Opportunity/fields/PHAcuerdoJudOExtra__c.field-meta.xml
<CustomField>
    <fullName>PHAcuerdoJudOExtra__c</fullName>
    <description>Honorarios en caso de acuerdo judicial o extrajudicial(%)</description>
    <inlineHelpText>Honorarios en caso de acuerdo judicial o extrajudicial(%)</inlineHelpText>
    <label>Honorarios en caso de acuerdo [Jd/Ext]%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>