force-app/main/default/objects/Opportunity/fields/PHRecuperacionDineroOC__c.field-meta.xml
<CustomField>
    <fullName>PHRecuperacionDineroOC__c</fullName>
    <description>Campo trasladado de la HdE</description>
    <label>Honorarios recuperacion dinero</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>