force-app/main/default/objects/Opportunity/fields/PHResEstConCondenaCostas__c.field-meta.xml
<CustomField>
    <fullName>PHResEstConCondenaCostas__c</fullName>
    <description>Campo trasladado de la Hoja de Encargo</description>
    <label>H. res. est. con condena (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>