force-app/main/default/objects/Opportunity/fields/PHResEstConOSinConCostas__c.field-meta.xml
<CustomField>
    <fullName>PHResEstConOSinConCostas__c</fullName>
    <description>Honorarios resolución estimatoria con o sin condena en costas (%)</description>
    <label>H. res. est. con/sin condena (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>