force-app/main/default/objects/Opportunity/fields/PHResEstSinCondenaCostas__c.field-meta.xml
<CustomField>
    <fullName>PHResEstSinCondenaCostas__c</fullName>
    <description>Campo trasladado de la Hoja de Encargo</description>
    <label>H. res. est. sin condena</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>