force-app/main/default/objects/Opportunity/fields/PHRespectoHonorarios__c.field-meta.xml
<CustomField>
    <fullName>PHRespectoHonorarios__c</fullName>
    <description>Honorarios recuperación dinero  otras causas (%). Campo trasladado de la Hoja de Encargo</description>
    <label>Porcentaje respecto a Honorarios</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>