force-app/main/default/objects/Opportunity/fields/PInteresCondenaCostas__c.field-meta.xml
<CustomField>
    <fullName>PInteresCondenaCostas__c</fullName>
    <label>Porcentaje de intereses con condena %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>