force-app/main/default/objects/Opportunity/fields/PInteresSinCondenaCostas__c.field-meta.xml
<CustomField>
    <fullName>PInteresSinCondenaCostas__c</fullName>
    <label>Porcentaje de intereses sin condena %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>