force-app/main/default/objects/Opportunity/fields/ProductoInteres__c.field-meta.xml
<CustomField>
    <fullName>ProductoInteres__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Si la oportunidad se ha creado a través de la conversión de candidato se guarda el producto de interés que ha creado dicha oportunidad</description>
    <label>Producto de Interés</label>
    <referenceTo>LeadProduct__c</referenceTo>
    <relationshipLabel>Oportunidades</relationshipLabel>
    <relationshipName>Oportunidades</relationshipName>
    <type>Lookup</type>
</CustomField>