force-app/main/default/objects/Opportunity/fields/PSinCondenaCostas__c.field-meta.xml
<CustomField>
    <fullName>PSinCondenaCostas__c</fullName>
    <label>Honorarios sin condena a costas (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>