force-app/main/default/objects/Opportunity/fields/ReviewUrl__c.field-meta.xml
<CustomField>
    <fullName>ReviewUrl__c</fullName>
    <label>ReviewUrl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>