force-app/main/default/objects/Opportunity/fields/SocialNetwork__c.field-meta.xml
<CustomField>
    <fullName>SocialNetwork__c</fullName>
    <defaultValue>&quot;Google&quot;</defaultValue>
    <label>Encuesta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SocialNetworks</valueSetName>
    </valueSet>
</CustomField>