force-app/main/default/objects/Opportunity/fields/TotalProductos__c.field-meta.xml
<CustomField>
    <fullName>TotalProductos__c</fullName>
    <description>Número de productos añadidos a la oportunidad</description>
    <label>Total productos</label>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>