force-app/main/default/objects/Opportunity/fields/Ultima_Accion__c.field-meta.xml
<CustomField>
    <fullName>Ultima_Accion__c</fullName>
    <description>Última Acción en la oportunidad antes de cerrarla como ganada o perdida.</description>
    <inlineHelpText>Última Acción en la oportunidad antes de cerrarla como ganada o perdida.</inlineHelpText>
    <label>Última Acción</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Llamada realizada</fullName>
            </value>
            <value>
                <fullName>Email enviado</fullName>
            </value>
            <value>
                <fullName>Cita presencial</fullName>
            </value>
            <value>
                <fullName>Recaptura</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>