force-app/main/default/objects/Opportunity/fields/Validacion_Fecha__c.field-meta.xml
<CustomField>
    <fullName>Validacion_Fecha__c</fullName>
    <label>Validación Fecha</label>
    <type>DateTime</type>
</CustomField>