force-app/main/default/objects/Opportunity/fields/Validacion_Resultado__c.field-meta.xml
<CustomField>
    <fullName>Validacion_Resultado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Validación Correcta</label>
    <type>Checkbox</type>
</CustomField>