force-app/main/default/objects/Opportunity/validationRules/BloquearGanadaSinProducto.validationRule-meta.xml
<ValidationRule>
    <fullName>BloquearGanadaSinProducto</fullName>
    <active>true</active>
    <description>Bloquea las oportunidades que no tienen Producto de Oportunidad</description>
    <errorConditionFormula>AND(
Text(StageName)=$Label.OportunidadCerragaGanada,
ISCHANGED(StageName),
TotalProductos__c = 0
)</errorConditionFormula>
    <errorMessage>La Oportunidad debe tener un Producto de Oportunidad!</errorMessage>
</ValidationRule>