force-app/main/default/objects/Opportunity/validationRules/BloquearOppCerrada.validationRule-meta.xml
<ValidationRule>
    <fullName>BloquearOppCerrada</fullName>
    <active>true</active>
    <description>Si la oportunidad está cerrada, no se puede cambiar la etapa</description>
    <errorConditionFormula>AND(
    OR(
       TEXT(PRIORVALUE(StageName)) = &quot;Cerrada ganada&quot;,
       TEXT(PRIORVALUE(StageName)) = &quot;Cerrada perdida&quot;
    ),
    ISCHANGED(StageName) 
)</errorConditionFormula>
    <errorMessage>No se puede cambiar la etapa de una oportunidad ya cerrada</errorMessage>
</ValidationRule>