force-app/main/default/objects/Opportunity/validationRules/BloquearSegundoProducto.validationRule-meta.xml
<ValidationRule>
    <fullName>BloquearSegundoProducto</fullName>
    <active>true</active>
    <description>Impide añadir más de un producto a la oportunidad</description>
    <errorConditionFormula>TotalProductos__c &gt; 1</errorConditionFormula>
    <errorMessage>Sólo se puede vincular un producto a cada oportunidad</errorMessage>
</ValidationRule>