force-app/main/default/objects/Opportunity/validationRules/CerrarOportunidadenCreacion.validationRule-meta.xml
<ValidationRule>
    <fullName>CerrarOportunidadenCreacion</fullName>
    <active>true</active>
    <description>Impide que la oportunidad se marque como cerrada ganada en la creación</description>
    <errorConditionFormula>AND (
ISNEW(),
TEXT(StageName) = &quot;Cerrada ganada&quot;
)</errorConditionFormula>
    <errorMessage>No puede cerrarse la oportunidad en la creación de la misma</errorMessage>
</ValidationRule>